--- a/deno.json
+++ b/deno.json
@@ -3,6 +3,7 @@
 		"dev": "deno run --watch main.ts"
 	},
 	"imports": {
+		"@panha/scrape": "jsr:@panha/scrape@^2.0.0",
 		"@std/assert": "jsr:@std/assert@1"
 	},
 	"fmt": {
