--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,7 @@
 {
 	"tasks": {
-		"dev": "deno run --watch main.ts"
+		"dev": "deno run --watch main.ts",
+		"getTournament": "deno --allow-env --allow-net --allow-write util/webScraper.ts" 
 	},
 	"imports": {
 		"@panha/scrape": "jsr:@panha/scrape@^2.0.0",
