--- a/deno.json
+++ b/deno.json
@@ -5,7 +5,8 @@
 	},
 	"imports": {
 		"@panha/scrape": "jsr:@panha/scrape@^2.0.0",
-		"@std/assert": "jsr:@std/assert@1"
+		"@std/assert": "jsr:@std/assert@1",
+		"@/": "./src/"
 	},
 	"fmt": {
 		"useTabs": true,
