--- a/deno.json
+++ b/deno.json
@@ -1,12 +1,12 @@
 {
 	"tasks": {
 		"dev": "deno run --watch main.ts",
-		"getTournament": "deno --allow-env --allow-net --allow-write util/webScraper.ts" 
+		"getTournament": "deno --allow-env --allow-net --allow-write util/webScraper.ts"
 	},
 	"imports": {
+		"@/": "./src/",
 		"@panha/scrape": "jsr:@panha/scrape@^2.0.0",
-		"@std/assert": "jsr:@std/assert@1",
-		"@/": "./src/"
+		"@std/assert": "jsr:@std/assert@1"
 	},
 	"fmt": {
 		"useTabs": true,
